<resources>
    <string name="send">Verstuur</string>
    <string name="scroll_top">Naar top</string>
    <string name="sort">Sort</string>
    <string name="search_title">Zoeken</string>
    <string name="search_hint">Zoek…</string>
    <string name="edit_item">Wijzig</string>
    <string name="share_item">Deel</string>
    <string name="close">Sluiten</string>
    <string name="url_copied">Link gekopieerd naar klembord</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navigation_item_quotes">Quotes</string>
    <string name="navigation_item_events">Activiteiten</string>
    <string name="navigation_item_beers">Bieren</string>
    <string name="navigation_item_news">Nieuws</string>
    <string name="navigation_item_users">Leden</string>
    <string name="navigation_item_meetings">Vergaderingen</string>
    <string name="navigation_item_stickers">Stickers</string>
    <string name="navigation_item_changes">Log</string>
    <string name="navigation_item_settings">Instellingen</string>
    <string name="navigation_item_about">Over</string>
    <string name="quote">Wat zei die lul?</string>
    <string name="send_quote">Post</string>
    <string name="quote_hint">Typ dan heumeu!</string>
    <string name="apikeydialogtitle">Voer je API-key in!</string>
    <string name="apikeydialogmessage">Deze kan bemachtigd worden op www.zondersikkel.nl</string>
    <string name="dialog_positive">Oké</string>
    <string name="event_aanwezig_button">aanwezig</string>
    <string name="event_afwezig_button">afwezig</string>
    <string name="new_event">Nieuwe activiteit</string>
    <string name="event_title">Naam</string>
    <string name="event_location">Waar is het?</string>
    <string name="event_description">Wat gaan we doen?</string>
    <string name="date">Datum:</string>
    <string name="endDate">End time:</string>
    <string name="deadline">Deadline:</string>
    <string name="description">Beschrijving</string>
    <string name="attendance_reason_title">Afwezigheid</string>
    <string name="attendance_reason_message">De reden van afwezigheid</string>
    <string name="attendance_reason_size">Je reden is kut! (te kort)</string>
    <string name="reminder_title">Weet je het zeker?</string>
    <string name="reminder_message">Iedereen die zich nog niet heeft ingeschreven krijgt een mail ter herrinering. \nLet op, dit kan wel tot een minuut duren!</string>
    <string name="menu_upcoming">Aankomend</string>
    <string name="menu_all">Alle</string>
    <string name="event_not_found">Activiteit niet gevonden</string>
    <string name="new_beer">Nieuw biertje</string>
    <string name="beer_name">Naam</string>
    <string name="beer_picture">URL naar afbeelding</string>
    <string name="beer_soort">Soort</string>
    <string name="beer_alc">ALC percentage</string>
    <string name="beer_percentage">Percentage (e.g. 8.0%)</string>
    <string name="beer_brewer">Brouwer</string>
    <string name="beer_country">Land</string>
    <string name="beer_rating">Gemiddelde cijfer</string>
    <string name="date_unknown">Datum niet bekend</string>
    <string name="new_review">Nieuwe review</string>
    <string name="edit_review">Wijzig review</string>
    <string name="review_hint">Wat vond je er van?</string>
    <string name="rating">Cijfer: 1</string>
    <string name="review_pick_date">Proefdatum :</string>
    <string name="review_pick_date_button">Datum</string>
    <string name="review_pick_time_button">Tijd</string>
    <string name="review_update">Wijzig review</string>
    <string name="review_delete">Verwijder review</string>
    <string name="review_delete_message">Weet je zeker dat je deze review wilt verwijderen?</string>
    <string name="new_news">Nieuw nieuwsitem</string>
    <string name="news_title">Titel</string>
    <string name="news_body">Vertel dan..</string>
    <string name="change_quote_new">Quote geplaatst</string>
    <string name="change_quote_update">Quote bijgewerkt</string>
    <string name="change_quote_destroy">Quote verwijderd</string>
    <string name="change_event_new">Evenement aangemaakt</string>
    <string name="change_event_update">Evenement bijgewerkt</string>
    <string name="change_event_destroy">Evenement verwijderd</string>
    <string name="change_signup_new">Inschrijving aangemaakt</string>
    <string name="change_signup_update">Inschrijving bijgewerkt</string>
    <string name="change_signup_destroy">Inschrijving verwijderd</string>
    <string name="change_beer_new">Biertje toegevoegd</string>
    <string name="change_beer_update">Biertje bijgewerkt</string>
    <string name="change_beer_destroy">Biertje verwijderd</string>
    <string name="change_news_new">Nieuws aangemaakt</string>
    <string name="change_news_update">Nieuws bijgewerkt</string>
    <string name="change_news_destroy">Nieuws verwijderd</string>
    <string name="change_user_new">Gebruiker verwijderd</string>
    <string name="change_user_update">Gebruiker bijgewerkt</string>
    <string name="change_user_destroy">Gebruiker verwijderd</string>
    <string name="change_nick_new">Nickname aangemaakt</string>
    <string name="change_nick_update">Nickname bijgewerkt</string>
    <string name="change_nick_destroy">Nickname verwijderd</string>
    <string name="change_review_new">Review aangemaakt</string>
    <string name="change_review_update">Review bijgewerkt</string>
    <string name="change_review_destroy">Review verwijderd</string>
    <string name="change_sticker_new">Sticker geplakt</string>
    <string name="change_sticker_update">Sticker bijgewerkt</string>
    <string name="change_sticker_destroy">Sticker verwijderd</string>
    <string name="change_meeting_new">Vergadering aangemaakt</string>
    <string name="change_meeting_update">Vergadering bijgewerkt</string>
    <string name="change_meeting_destroy">Vergadering verwijderd</string>
    <string name="user_name">Naam</string>
    <string name="user_status">Status</string>
    <string name="user_email">Email</string>
    <string name="user_quotecount">Aantal quotes</string>
    <string name="user_reviewcount">Aantal reviews</string>
    <string name="user_batch">Lichting</string>
    <string name="user_nickname">Bijnamen</string>
    <string name="user_member">Lid</string>
    <string name="user_member_ex">Oud-lid</string>
    <string name="menu_users">Huidig</string>
    <string name="menu_users_ex">Overig</string>
    <string name="menu_meeting_notes">Notulen</string>
    <string name="menu_meeting_agenda">Agenda</string>
    <string name="new_meeting">Nieuwe vergadering</string>
    <string name="new_meeting_subject">Onderwerp</string>
    <string name="new_meeting_agenda">Agenda</string>
    <string name="new_meeting_notes">Notulen</string>
    <string name="new_meeting_pick_date">Vergaderdatum :</string>
    <string name="new_meeting_user">Notulist :</string>
    <string name="sticker_post_title">Sticker plakken</string>
    <string name="sticker_post_message">Je huidige locatie zal worden bepaald en gebruikt als locatie van de sticker.</string>
    <string name="sticker_post_note">Optionele notitie</string>
    <string name="sticker_no_permission">Zonder toestemming je locatie op te vragen kun je geen stickers plakken!</string>
    <string name="general">Algemeen</string>
    <string name="push_title">Push notificaties</string>
    <string name="pref_summaryOn">Push notifications ontvangen</string>
    <string name="pref_summaryOff">Push notifications niet ontvangen</string>
    <string name="apikey_summary">Deze vind je op de website</string>
    <string name="apikey_hint">Plak je key hier..</string>
    <string name="data_category">Data</string>
    <string name="clear_image_cache_setting">Leeg image cache</string>
    <string name="clear_image_cache_snackbar">Image cache cleared!</string>
    <string name="clear_image_cache_summary">Only deletes cached images</string>
    <string name="clear_storage_setting">Clear data storage</string>
    <string name="clear_storage_snackbar">Data storage cleared!</string>
    <string name="clear_storage_summary">Does not clear your API-key</string>
    <string name="refresh_app">Herlaad app</string>
    <string name="refresh_app_summary">Dit is veel sneller dan een herstart</string>
    <string name="get_all_data">Download all data</string>
    <string name="get_all_data_summary">This overwrites local caches of quotes, events etc.</string>
    <string name="get_all_data_snackbar">Job in queue! This should be finished shortly.</string>
    <string name="sorting_category">Sorteren</string>
    <string name="downloading">De gegevens worden gedownload</string>
    <string name="store_key_settings">Een apikey kan ingevuld worden bij instellingen</string>
    <string name="generic_error">Er is iets misgegaan, probeer het later opnieuw.</string>
    <string name="volley_error">Fout bij ophalen data van server.</string>
    <string name="server_error">Oh noes! De server verslikte zich!</string>
    <string name="connection_error">Oh noes! Je hebt geen verbinding!</string>
    <string name="network_error">Oh noes! De verbinding ging stuk!</string>
    <string name="timeout_error">Timeout bij ophalen data.</string>
    <string name="auth_error">Authenticatie error. Probeer je API key opnieuw in te voeren.</string>
    <string name="unit_destroyed">Er staat toch verwijderd?!</string>
    <string name="sort_quotes">Aantal quotes</string>
    <string name="sort_reviews">Aantal reviews</string>
    <string name="sort_batch">Lichting</string>
    <string name="sort_rating">Cijfer</string>
    <string name="sort_name">Naam</string>
    <string name="sort_date_asc">Datum (ASC)</string>
    <string name="sort_date_desc">Datum (DESC)</string>
    <string name="posted">Gelukt! :)</string>
    <string name="missing_fields">Vul alle velden in!</string>
    <string name="press_back_again">Klik nog een keer op \'back\' om af te sluiten.</string>
    <string name="no_image">Dit biertje heeft geen afbeelding!</string>
    <string name="transition_single_image">transition_beer_image</string>
    <string name="gps_missing">Google Play Services missing! This app probably won\'t function properly.</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.
    </string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.
    </string>
    <string name="about_libraries">Bibliotheken</string>
    <string name="you_are_running">Je gebruikt</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://zondersikkel.nl\",\n  }\n}]</string>
</resources>