<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <PreferenceCategory android:title="@string/general">
        <EditTextPreference
            android:hint="@string/apikey_hint"
            android:inputType="textMultiLine"
            android:key="apikey"
            android:summary="@string/apikey_summary"
            android:title="API Key" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pushPref"
            android:summaryOff="@string/pref_summaryOff"
            android:summaryOn="@string/pref_summaryOn"
            android:title="@string/push_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/data_category">
        <Preference
            android:key="clear_image_cache"
            android:title="@string/clear_image_cache_setting"
            android:summary="@string/clear_image_cache_summary"/>
        <Preference
            android:key="clear_storage"
            android:title="@string/clear_storage_setting"
            android:summary="@string/clear_storage_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sorting_category">
        <ListPreference
            android:defaultValue="none"
            android:entries="@array/usersort_array"
            android:entryValues="@array/usersort_array_values"
            android:key="userSort"
            android:title="Leden sorteren" />
        <ListPreference
            android:defaultValue="datumASC"
            android:entries="@array/beersort_array"
            android:entryValues="@array/beersort_array_values"
            android:key="beerSort"
            android:title="Bier sorteren" />
    </PreferenceCategory>
</PreferenceScreen>