<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_quotes"
            android:checked="true"
            android:icon="@drawable/quotes"
            android:title="@string/navigation_item_quotes" />
        <item
            android:id="@+id/navigation_item_events"
            android:icon="@drawable/events"
            android:title="@string/navigation_item_events" />

        <item
            android:id="@+id/navigation_item_beers"
            android:icon="@drawable/beers"
            android:title="@string/navigation_item_beers" />
        <item
            android:id="@+id/navigation_item_news"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/navigation_item_news" />
        <item
            android:id="@+id/navigation_item_users"
            android:icon="@drawable/users"
            android:title="@string/navigation_item_users" />
        <item
            android:id="@+id/navigation_item_motions"
            android:icon="@drawable/motions"
            android:title="@string/navigation_item_motions" />
        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/settings"
            android:title="@string/navigation_item_settings" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_item_about"
            android:title="@string/navigation_item_about"
            app:ico_icon="gmd-plus-circle"/>
    </group>

</menu>