<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/new_review"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/review_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/review_hint"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:padding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/review_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/rating"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/ratingseekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="9" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:text="@string/review_pick_date"
            android:textSize="18sp" />

        <Button
            android:id="@+id/pick_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="showDatePickerDialog"
            android:text="@string/review_pick_date_button" />
    </LinearLayout>
</LinearLayout>