<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_above="@+id/buttonLayout">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/new_beer"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:padding="20dp"/>

            <EditText
                    android:id="@+id/beer_title_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/beer_name"
                    android:padding="20dp"/>

            <EditText android:id="@+id/beer_picture_et"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="16dp"
                      android:layout_marginLeft="15dp"
                      android:layout_marginRight="15dp"
                      android:layout_marginBottom="4dp"
                      android:inputType="textMultiLine"
                      android:hint="@string/beer_picture"
                      android:padding="20dp"/>

            <EditText android:id="@+id/beer_soort_et"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="16dp"
                      android:layout_marginLeft="15dp"
                      android:layout_marginRight="15dp"
                      android:layout_marginBottom="4dp"
                      android:inputType="textMultiLine"
                      android:hint="@string/beer_soort"
                      android:padding="20dp"/>
            <EditText
                    android:id="@+id/beer_percentage_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/beer_percentage"
                    android:padding="20dp"/>

            <EditText android:id="@+id/beer_brewer_et"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="16dp"
                      android:layout_marginLeft="15dp"
                      android:layout_marginRight="15dp"
                      android:layout_marginBottom="4dp"
                      android:inputType="textMultiLine"
                      android:hint="@string/beer_brewer"
                      android:padding="20dp"/>
            <EditText
                    android:id="@+id/beer_country_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/beer_country"
                    android:padding="20dp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

        <Button
                android:id="@+id/sendbeer_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/send"
                android:onClick="postBeer"/>
    </LinearLayout>

</RelativeLayout>