<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/new_event"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/event_title"
            android:inputType="textCapWords"
            android:padding="16dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/event_location"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:padding="16dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/event_beschrijving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/event_description"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:padding="16dp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_date"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:text="@string/date"
            android:textSize="18sp" />

        <Button
            android:id="@+id/event_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="showTimePickerDialog"
            android:text="@string/review_pick_time_button" />

        <Button
            android:id="@+id/event_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="showDatePickerDialog"
            android:text="@string/review_pick_date_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:text="@string/endDate"
            android:textSize="18sp" />

        <Button
            android:id="@+id/event_end_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="showEndTimePickerDialog"
            android:text="@string/review_pick_time_button" />

        <Button
            android:id="@+id/event_end_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="showEndDatePickerDialog"
            android:text="@string/review_pick_date_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:text="@string/deadline"
            android:textSize="18sp" />

        <Button
            android:id="@+id/event_deadline_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="showDeadlineTimePickerDialog"
            android:text="@string/review_pick_time_button" />

        <Button
            android:id="@+id/event_deadline_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="showDeadlineDatePickerDialog"
            android:text="@string/review_pick_date_button" />
    </LinearLayout>
</LinearLayout>